fix: 최신 develop 기준 랩실 후기 기능 및 마이그레이션 수정